# Agentic_MLOps

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
agentic_mlops/: __init__.py
apps/api/: pyproject.toml
apps/api/api_app/: main.py
apps/api/api_app/routers/: agent.py
apps/web/: package.json
deploy/: docker-compose.dev.yml  docker-compose.yml
deploy/init-scripts/postgres/: 01-init.sql
docs/: MVP_SPEC.md  TASK_CARDS.md
scripts/: wait-for-services.sh
scripts/hooks/: check_forbidden_patterns.py  check_mcp_compliance.py  on_stop_reminder.py  post_write_lint.py  pre_bash_safety.py
specs/: _index.md  _template.md
specs/cross-cutting/: E2E-01-golden-path.md  NFR-01-observability.md  NFR-02-docker-compose.md  NFR-03-test-coverage.md
specs/module-1-agent-core/: A-01-intent-understanding.md  A-02-planner.md  A-03-dual-loop-executor.md  A-04-tool-calling-mcp.md  A-05-short-term-memory.md  A-06-long-term-memory.md  A-07-skill-library.md  A-08-self-critique.md  A-09-skill-abstraction.md  A-10-streaming-output.md
specs/module-2-mcp-gateway/: G-01-capability-manifest.md  G-02-jwt-auth.md  G-03-rbac.md  G-04-call-routing.md  G-05-audit-log.md  G-06-circuit-breaker.md  G-07-dry-run.md  G-08-pii-masking.md  MCP-S1-mcp-jupyter.md  MCP-S2-mcp-feature-store.md  MCP-S3-mcp-data-catalog.md
specs/module-3-rag-engine/: R-01-document-ingestion.md  R-02-chunking.md  R-03-embedding.md  R-04-vector-search.md  R-05-hybrid-search.md  R-06-reranking.md  R-07-metadata-filter.md  R-08-incremental-update.md  R-09-context-injection.md
specs/module-4-web-ide/: U-01-project-management.md  U-02-code-editor.md  U-03-notebook-view.md  U-04-agent-chat.md  U-05-thinking-chain.md  U-06-hitl-dialog.md  U-07-experiment-dashboard.md  U-08-feature-model-sidebar.md  U-09-file-explorer.md  U-10-theme-toggle.md
specs/module-5-feature-store/: F-01-feast-setup.md  F-02-offline-store.md  F-03-online-store.md  F-04-feature-view-registration.md  F-05-materialization.md  F-06-stream-ingestion.md  F-07-quality-monitoring.md  F-08-feature-lineage.md
tests/: test_smoke.py
